plugins {
    id "com.android.library"
    id "dev.rikka.tools.refine"
}

android {
    namespace = "rikka.shizuku.server"
    buildTypes {
        release {
            minifyEnabled = false
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}

dependencies {
    implementation libs.androidx.annotation
    implementation libs.androidx.core
    implementation libs.parcelablelist

    api project(":aidl")
    api project(":shared")
    api project(":rish")

    implementation libs.refine.runtime
    implementation libs.hidden.compat
    compileOnly libs.hidden.stub
}
